# HotelManagementSystem

./: .gitignore  CMakeLists.txt  README.md  main.cpp  resources.qrc
backend/hotel-management-system/: db.sqlite3
backend/hotel-management-system/hotel/: .serializers.py.swp  admin.py  models.py  serializers.py  urls.py  views.py
backend/hotel-management-system/hotel/migrations/: 0001_initial.py  0002_alter_room_room_number.py  0003_remove_guest_room_guest_room_number_room_room_type.py  0004_reservation_room_type.py  0005_remove_guest_room_number_guest_room.py  0006_alter_reservation_status.py  0007_reservation_room_alter_reservation_status.py  0008_alter_checkinandout_action_alter_guest_full_name_and_more.py
backend/hotel-management-system/hotel_management/: settings.py
controllers/: CheckInOutModel.cpp  CheckInOutModel.h  FilterableListModel.cpp  FilterableListModel.h  GuestModel.cpp  GuestModel.h  ReservationModel.cpp  ReservationModel.h  RoomModel.cpp  RoomModel.h
ui/checkInAndOutScreen/: CheckInAndOut.qml
ui/commonComponents/: Button.qml
ui/guestScreen/: NewGuest.qml  newguest.cpp  newguest.h
ui/welcomeScreen/: WelcomeScreen.qml
